change auth logic, add route to check social demo users
