# controllers/authenticationController.js
@@ -1,10 +1,11 @@
-const { signInView, validateAuthTokenView } = require( '../views/authenticationController' );
+const { signInView, validateAuthTokenView, hasSocialView } = require( '../views/authenticationController' );
 const render = require( '../concerns/render' );
+const { UserModel } = require( '../models' );
 const { setAuthHeaders } = require( '../utilities/authentication/sessions' );
 const Strategies = require( './authStrategies' );
 
-const facebookSignIn = async ( req, res, next ) => {
-    const { user, session, error } = await Strategies.facebookStrategy( req, res, next );
+const socialSignIn = async ( req, res, next ) => {
+    const { user, session, error } = await Strategies.socialStrategy( req, res, next );
 
     if( error ) return render.unauthorized( res, error );
 
@@ -17,7 +18,14 @@ const validateAuthToken = async( req, res ) => {
     return render.success( res, validateAuthTokenView( { user: req.auth.user } ) );
 };
 
+const hasSocialAccount = async ( req, res ) => {
+    const result = await UserModel.findUserBySocial( { id: req.query.id, provider: req.query.provider } );
+
+    return render.success( res, hasSocialView( { result: !!result } ) );
+};
+
 module.exports = {
-    facebookSignIn,
+    hasSocialAccount,
+    socialSignIn,
     validateAuthToken
 };
