# models/userModel.js
@@ -12,33 +12,59 @@ const destroySession = async ( { user_id, session } ) => {
     await User.updateOne( { _id: user_id }, { $pull: { 'auth.sessions': { _id: session._id } } } );
 };
 
-const findOrCreateSocial = async( { query, session, metadata } ) => {
-    const user = await User.findOne( { query } );
-    const userMetadata = user ? getUserMetadata( { user } ) : {};
-
-    if( !userMetadata.profile ) userMetadata.profile = {};
-
-    _.assign( userMetadata.profile, metadata );
-
-    return await User.findOneAndUpdate( query,
-        {
-            $set: { query, json_metadata: JSON.stringify( userMetadata ) },
-            $push: { 'auth.sessions': session }
-        },
-        { new: true, upsert: true, runValidators: true, setDefaultsOnInsert: true }
-    ).lean();
+const findUserBySocial = async( { id, provider } ) => {
+    return await User.findOne( { 'auth.provider': provider, 'auth.id': id } );
 };
 
-const getUserMetadata = ( { user } ) => {
+const findUserByName = async( { name } ) => {
+    return await User.findOne( { name } );
+};
+
+const signUpSocial = async( { userName, pickFields, socialName, provider, avatar, id, session } ) => {
+    let metadata, alias;
+
+    if( pickFields ) {
+        metadata = { profile: { name: socialName, profile_image: avatar, [ provider ]: generateSocialLink( { provider, id } ) } };
+        alias = socialName;
+    }
+    const user = new User( {
+        name: userName,
+        json_metadata: metadata ? JSON.stringify( metadata ) : '',
+        alias,
+        'auth.sessions': [ session ],
+        'auth.provider': provider,
+        'auth.id': id
+    } );
+
     try{
-        return user.json_metadata && user.json_metadata !== '' ? JSON.parse( user.json_metadata ) : {};
+        await user.save();
     } catch( error ) {
-        return {};
+        return { error };
+    }
+
+    return{ user: user.toObject(), session };
+};
+
+const signInSocial = async( { user_id, session } ) => {
+    const user = await User.findOneAndUpdate( { _id: user_id }, { $push: { 'auth.sessions': session } } ).lean();
+
+    await destroyLastSession( { user } );
+    return{ user: user, session };
+};
+
+const generateSocialLink = ( { provider, id } ) => {
+    switch ( provider ) {
+        case 'facebook' :return `https://www.facebook.com/${id}`;
+        case 'instagram' :return `https://www.instagram.com/${id}`;
+        default :return null;
     }
 };
 
 module.exports = {
-    findOrCreateSocial,
+    signUpSocial,
+    signInSocial,
+    findUserByName,
+    findUserBySocial,
     destroyLastSession,
     destroySession
 };
